test/invalid/baseline/array.txt
Syntax error at line 5, since `interface LotteryResults`:
  readonly attribute unsigned short[][] numbers
                                   ^ No name in attribute
